  * Maintainer team: Debian Edu Packaging Team.
  * /debian/control:
    + Fix Uploaders:-field (missing commata).
  * Lintian issues fixed:
    + W: sankore source: stronger-dependency-implies-weaker sankore-data
      depends -> suggests ${misc:Depends}.
    + E: sankore source: debian-revision-should-not-be-zero 3.1~git20120517-0.
    + W: sankore: hardening-no-fortify-functions usr/bin/Open-Sankore.bin
    + W: sankore: hardening-no-fortify-functions
      usr/lib/open-sankore/x86_64-linux-gnu/libCFF_Adaptor.so.1
    + W: sankore: hardening-no-fortify-functions
      usr/lib/open-sankore/x86_64-linux-gnu/libCFF_Adaptor.so.1.0
    + W: sankore: hardening-no-fortify-functions
      usr/lib/open-sankore/x86_64-linux-gnu/libCFF_Adaptor.so.1.0.0
    + W: sankore: hardening-no-relro usr/lib/open-sankore/Open-Sankore.bin
    + W: sankore: hardening-no-relro
      usr/lib/open-sankore/x86_64-linux-gnu/libCFF_Adaptor.so.1
    + W: sankore: hardening-no-relro
      usr/lib/open-sankore/x86_64-linux-gnu/libCFF_Adaptor.so.1.0
    + W: sankore: hardening-no-relro
      usr/lib/open-sankore/x86_64-linux-gnu/libCFF_Adaptor.so.1.0.0
    + W: sankore: executable-not-elf-or-script usr/bin/Open-Sankore
    + W: sankore: new-package-should-close-itp-bug
    + W: sankore-data: new-package-should-close-itp-bug
    + W: sankore-dbg: new-package-should-close-itp-bug
  * Lintian overrides:
    + Enable dh_lintian.
    + W: sankore-data: script-not-executable
      usr/share/open-sankore/linux/run.sh.
  * /debian/rules:
    + Create Open-Sankore.bin in /usr/lib/open-sankore and only keep its
      wrapper in /usr/bin -> saves us writing/symlinking a second man page.
    + Make sure that the hardening compiler/linker flags are handled correctly
      by qmake-qt4.
    + Enable parallel (make -j4) build.
  * Patches:
    + Add patch: enable_i18n.patch -> build .qm files on the fly during
      qmake-qt4 run.

 -- Miriam Ruiz <little_miry@yahoo.es>  Thu, 10 May 2012 18:29:03 +0200