@@ -1,3 +1,5 @@
+Description: Fix buildopts on Linux
+Author: Miriam Ruiz <miriam@debian.org>
 Index: new/Sankore-3.1/Sankore_3.1.pro
 ===================================================================
 --- new.orig/Sankore-3.1/Sankore_3.1.pro	2012-05-16 12:44:30.607565467 +0200
