@@ -40,6 +40,7 @@ sankore (3.1~git20120517-1) UNRELEASED; urgency=low
       by qmake-qt4.
     + Enable parallel (make -j4) build.
   * Patches:
+    + Add patch descriptions and authors.
     + Add patch: enable_i18n.patch -> build .qm files on the fly during
       qmake-qt4 run.
 
